<resources>
    <string name="app_name">Умники и умницы</string>
    <string name="choose_quiz">Выберите викторину</string>
    <string name="book">Книги</string>
    <string name="astronomia">Астрономия</string>
    <string name="animal">Животный мир</string>
    <string name="flower">Растительный мир</string>
    <string name="start_quiz">Начать викторину</string>
    <string name="quiz_result_title">Ваш результат:</string>
    <string name="quiz_result_correct">Количество правильных ответов: 0</string>
    <string name="quiz_result_incorrect">Количество неправильных ответов: 0</string>
    <string name="start_quiz_new">Начать новую викторину</string>
    <string name="question_next">Следующий вопрос</string>
    <string name="cartoons_text">Мультфильмы</string>
    <string name="nature_text">Природа</string>
    <string name="sport_text">Спорт</string>
    <string name="crafts_text">Ремесла</string>
</resources>