<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".QuizResults">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/congrat"
        android:id="@+id/congratIcon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_below="@+id/congratIcon"
        android:text="@string/quiz_result_title"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/successTextView"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/successTextView"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_result_correct"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#00C855"
            android:id="@+id/correctAnswer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/quiz_result_incorrect"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#DD2C00"
            android:id="@+id/incorrectAnswer"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start_quiz_new"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/round_back_green"
        android:textColor="#FFFFFF"
        android:id="@+id/startNewQuizBtn"/>

</RelativeLayout>